# sysrepo

./: CMakeLists.txt  build.sh
bindings/cpp/: CMakeLists.txt
